--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="Professor Reinaldo Oliveira">
     <meta name="keywords" content="marcelooliveira, professormarcelo, aedbresende, aedb, professor marcelo, marcelo391, marcelo_rde, marcelorde">
     <meta name="author" content="">
-    <title>Reinaldo de Oliveira</title>
+    <title>Pedro Gabriel</title>
    <!--  <link rel="shortcut icon" href="assets/img/favicon.ico"> -->
 
     <!-- build:css -->
@@ -44,11 +44,11 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-md-8">
-				<h1 class="brand-heading">REINALDO OLIVEIRA</h1>
+				<h1 class="brand-heading">PEDRO GABRIEL</h1>
 				<p class="intro-text">
-					<!-- Analista de BI e Professor de Programação 
-					🎓 Developer • Teacher • IT Professional 🎓-->
-					🎓 Business Analyst and  IT Teacher 🎓
+					<!-- Analista de Software e Estudante de Programação 
+					🎓 Developer • Game Creator • TI Professional 🎓-->
+					🎓 Business Analyst 🎓
 				</p>
 				<a href="#pageid" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
