--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Professor Reinaldo Oliveira">
+    <meta name="description" content="Developer Pedro Gabriel">
     <meta name="keywords" content="marcelooliveira, professormarcelo, aedbresende, aedb, professor marcelo, marcelo391, marcelo_rde, marcelorde">
     <meta name="author" content="">
     <title>Pedro Gabriel</title>
@@ -82,7 +82,7 @@
 <footer>
 <div class="container text-center">
     <p class="credits">
-		@MarceloOliveira      
+		@Gabrieljs      
     </p>
 </div>
 </footer>
